--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.20.3",
+    "axios": "^1.7.5",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hotkeys-hook": "^4.5.0",
+    "react-keydown": "^1.9.12",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-vk": "^5.0.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "vk-auth": "^1.0.6",
+    "vk-io": "^4.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
