--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "antd": "^5.20.3",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
+    "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
+    "draft-js-table": "^0.3.0",
+    "draft-js-utils": "^1.4.1",
+    "html-to-draftjs": "^1.5.0",
+    "immutable": "^4.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hotkeys-hook": "^4.5.0",
     "react-keydown": "^1.9.12",
     "react-redux": "^9.1.2",
@@ -50,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "draftjs-to-html": "^0.9.1"
   }
 }
