--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "draft-js-table": "^0.3.0",
     "draft-js-utils": "^1.4.1",
     "html-to-draftjs": "^1.5.0",
-    "immutable": "^4.3.7",
+    "immutable": "^3.8.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hotkeys-hook": "^4.5.0",
