--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-vk": "^5.0.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.0",
     "vk-auth": "^1.0.6",
     "vk-io": "^4.9.1",
     "web-vitals": "^2.1.4"
