--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@mui/material": "^5.16.7",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
