--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "draft-js": "^0.11.7",
     "draft-js-import-html": "^1.4.1",
     "draft-js-table": "^0.3.0",
