--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
+    "@mdxeditor/editor": "^3.20.0",
     "@mui/material": "^5.16.7",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.2.7",
@@ -23,12 +24,14 @@
     "draft-js-table": "^0.3.0",
     "draft-js-utils": "^1.4.1",
     "html-to-draftjs": "^1.5.0",
+    "i18next": "^24.1.0",
     "immutable": "^3.8.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hotkeys-hook": "^4.5.0",
+    "react-i18next": "^15.1.4",
     "react-keydown": "^1.9.12",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
