--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
+    "@lexical/react": "^0.21.0",
     "@mdxeditor/editor": "^3.20.0",
     "@mui/material": "^5.16.7",
     "@react-spring/web": "^9.7.5",
