--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-to-draftjs": "^1.5.0",
     "i18next": "^24.1.0",
     "immutable": "^3.8.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
